--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions": {
+    "strictNullChecks": true,
+    "target": "ES2020",
+    "noImplicitAny": true,
+    "incremental": true,
+    "skipLibCheck": true
+  },
+  "exclude": ["dist/"]
 }
